@@ -41,6 +41,7 @@ Misc variables:
 """
 
 __docformat__ = 'restructuredtext'
+_context = 'ScrollBar'
 
 from PyQt4.QtCore import *
 from PyQt4.QtGui import *
@@ -76,6 +77,6 @@ class ScrollBar(QScrollBar):
 
     def __tr(self, source, comment=None):
         """Translate method."""
-        return unicode(qApp.translate('VScrollBar', source, comment))
+        return unicode(qApp.translate(_context, source, comment))
 
 
